<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home Control</string>
    
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <string name="desc_zone_icon">Icon to represent the zone.</string>
    
    <!-- Strings for Home tab -->
    <string name="home_zone_status">You currently have no zones setup up.  Select "Zones" to add and
        configure new zones.</string>
        
    <!-- Strings for Zones tab -->
    <string name="zones_current_zones">Current Zones : </string>
    <string name="zones_button_add">Add Zone</string>
	<string name="zones_button_remove">Remove Zone</string>
	<string name="desc_add_zone">Add zone button</string>
	<string name="desc_remove_zone">Remove zone button</string>
	
	<!-- Strings for Zones popups -->
	<string name="zones_enter_name">Enter new zone name: </string>
	<string name="zones_name_hint">New name</string>
	<string name="zones_add">Add</string>
	<string name="zones_cancel">Cancel</string>
	<string name="zones_add_dialog_title">Add New Zone</string>
	<string name="zones_select_icon">Select an icon for the zone</string>
	
	
</resources>
